--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -16,6 +16,8 @@
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="752.0" maxWidth="1046.0" minHeight="752.0" minWidth="1046.0" prefHeight="752.0" prefWidth="1046.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.MainController">
    <MenuBar prefHeight="27.0" prefWidth="1046.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -218,21 +220,33 @@
          </Menu>
      </menus>
    </MenuBar>
-   <TitledPane animated="false" collapsible="false" layoutX="7.0" layoutY="33.0" minHeight="371.0" minWidth="378.0" prefHeight="371.0" prefWidth="416.0" text="Main settings" AnchorPane.leftAnchor="7.0" AnchorPane.topAnchor="33.0">
-      <fx:include fx:id="general" source="general.fxml" />
-   </TitledPane>
-   <AnchorPane fx:id="frequencyPane" layoutX="429.0" layoutY="692.0" prefHeight="53.0" prefWidth="610.0" styleClass="darkPane" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="7.0">
+   <AnchorPane fx:id="frequencyPane" prefHeight="53.0" prefWidth="610.0" styleClass="darkPane" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="429.0" AnchorPane.rightAnchor="7.0">
       <children>
-         <fx:include fx:id="image" layoutX="34.0" source="image.fxml" />
+         <HBox alignment="CENTER" prefHeight="53.0" prefWidth="610.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+               <fx:include fx:id="image" layoutX="34.0" source="image.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="0.0" />
+            </children>
+         </HBox>
       </children>
    </AnchorPane>
-   <TitledPane animated="false" collapsible="false" layoutX="429.0" layoutY="33.0" prefHeight="652.0" prefWidth="610.0" text="Audio Effects" AnchorPane.bottomAnchor="67.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="33.0">
+   <TitledPane animated="false" collapsible="false" layoutX="429.0" layoutY="33.0" prefHeight="652.0" prefWidth="610.0" text="Audio Effects" AnchorPane.bottomAnchor="67.0" AnchorPane.leftAnchor="429.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="33.0">
       <fx:include fx:id="effects" source="effects.fxml" />
    </TitledPane>
-   <TitledPane fx:id="objTitledPane" animated="false" collapsible="false" layoutX="7.0" layoutY="411.0" prefHeight="334.0" prefWidth="416.0" text="3D .obj file settings" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.topAnchor="410.0">
-      <fx:include fx:id="obj" source="obj.fxml" />
-   </TitledPane>
-    <TitledPane fx:id="luaTitledPane" animated="false" collapsible="false" layoutX="7.0" layoutY="411.0" prefHeight="334.0" prefWidth="416.0" text=".lua file settings" visible="false">
-        <fx:include fx:id="lua" source="lua.fxml" />
-    </TitledPane>
+   <VBox alignment="CENTER" layoutX="7.0" layoutY="-91.0" prefHeight="836.0" prefWidth="416.0" spacing="7.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.topAnchor="33.0">
+      <children>
+         <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="416.0" text="Main settings" VBox.vgrow="ALWAYS">
+            <fx:include fx:id="general" source="general.fxml" />
+         </TitledPane>
+         <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="320.0" prefWidth="416.0" VBox.vgrow="ALWAYS">
+            <children>
+               <TitledPane fx:id="objTitledPane" animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="416.0" text="3D .obj file settings" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <fx:include fx:id="obj" source="obj.fxml" />
+               </TitledPane>
+                <TitledPane fx:id="luaTitledPane" animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="416.0" text=".lua file settings" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <fx:include fx:id="lua" source="lua.fxml" />
+                </TitledPane>
+            </children>
+         </AnchorPane>
+      </children>
+   </VBox>
 </AnchorPane>
