Correctly bound audio animations and make the slider thumbs green to show an effect is being animated

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -102,9 +102,13 @@
     -fx-text-fill: white;
 }
 
+.slider {
+    -thumb-color: white;
+}
+
 .slider .thumb {
     -fx-background-color: very_dark;
-    -fx-border-color: white;
+    -fx-border-color: -thumb-color;
     -fx-border-radius: 1.0em; /* makes sure this remains circular */
     -fx-effect: inherit;
 }
